src/video.h

    typedef cv::Ptr<cv::BackgroundSubtractorMOG2> *BackgroundSubtractorMOG2;
    typedef cv::Ptr<cv::BackgroundSubtractorKNN> *BackgroundSubtractorKNN;
typedef void *BackgroundSubtractorMOG2;
typedef void *BackgroundSubtractorKNN;
    BackgroundSubtractorMOG2 BackgroundSubtractorMOG2_Create();
    BackgroundSubtractorMOG2 BackgroundSubtractorMOG2_CreateWithParams(int history, double varThreshold, bool detectShadows);
    void BackgroundSubtractorMOG2_Close(BackgroundSubtractorMOG2 b);
    void BackgroundSubtractorMOG2_Apply(BackgroundSubtractorMOG2 b, Mat src, Mat dst);
    BackgroundSubtractorKNN BackgroundSubtractorKNN_Create();
    BackgroundSubtractorKNN BackgroundSubtractorKNN_CreateWithParams(int history, double dist2Threshold, bool detectShadows);
    void BackgroundSubtractorKNN_Close(BackgroundSubtractorKNN b);
    void BackgroundSubtractorKNN_Apply(BackgroundSubtractorKNN b, Mat src, Mat dst);
    void CalcOpticalFlowFarneback(Mat prevImg, Mat nextImg, Mat flow, double pyrScale, int levels,
                                  int winsize, int iterations, int polyN, double polySigma, int flags);