packages/dartcv/lib/src/g/video.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv/src/g/types.g.dart' as imp1;

/// Native bindings for OpenCV - Video
///
class CvNativeVideo {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativeVideo(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativeVideo.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<CvStatus> BackgroundSubtractorKNN_Apply(
    BackgroundSubtractorKNN self,
    Mat src,
    Mat dst,
  ) {
    return _BackgroundSubtractorKNN_Apply(
      self,
      src,
      dst,
    );
  }

  late final _BackgroundSubtractorKNN_ApplyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(BackgroundSubtractorKNN, Mat,
              Mat)>>('BackgroundSubtractorKNN_Apply');
  late final _BackgroundSubtractorKNN_Apply =
      _BackgroundSubtractorKNN_ApplyPtr.asFunction<
          ffi.Pointer<CvStatus> Function(BackgroundSubtractorKNN, Mat, Mat)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorKNN_Apply_Async(
    BackgroundSubtractorKNN self,
    Mat src,
    imp1.CvCallback_1 callback,
  ) {
    return _BackgroundSubtractorKNN_Apply_Async(
      self,
      src,
      callback,
    );
  }

  late final _BackgroundSubtractorKNN_Apply_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(BackgroundSubtractorKNN, Mat,
              imp1.CvCallback_1)>>('BackgroundSubtractorKNN_Apply_Async');
  late final _BackgroundSubtractorKNN_Apply_Async =
      _BackgroundSubtractorKNN_Apply_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              BackgroundSubtractorKNN, Mat, imp1.CvCallback_1)>();

  void BackgroundSubtractorKNN_Close(
    BackgroundSubtractorKNNPtr self,
  ) {
    return _BackgroundSubtractorKNN_Close(
      self,
    );
  }

  late final _BackgroundSubtractorKNN_ClosePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(BackgroundSubtractorKNNPtr)>>(
      'BackgroundSubtractorKNN_Close');
  late final _BackgroundSubtractorKNN_Close = _BackgroundSubtractorKNN_ClosePtr
      .asFunction<void Function(BackgroundSubtractorKNNPtr)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorKNN_Create(
    ffi.Pointer<BackgroundSubtractorKNN> rval,
  ) {
    return _BackgroundSubtractorKNN_Create(
      rval,
    );
  }

  late final _BackgroundSubtractorKNN_CreatePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  ffi.Pointer<BackgroundSubtractorKNN>)>>(
      'BackgroundSubtractorKNN_Create');
  late final _BackgroundSubtractorKNN_Create =
      _BackgroundSubtractorKNN_CreatePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<BackgroundSubtractorKNN>)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorKNN_CreateWithParams(
    int history,
    double dist2Threshold,
    bool detectShadows,
    ffi.Pointer<BackgroundSubtractorKNN> rval,
  ) {
    return _BackgroundSubtractorKNN_CreateWithParams(
      history,
      dist2Threshold,
      detectShadows,
      rval,
    );
  }

  late final _BackgroundSubtractorKNN_CreateWithParamsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Double, ffi.Bool,
                  ffi.Pointer<BackgroundSubtractorKNN>)>>(
      'BackgroundSubtractorKNN_CreateWithParams');
  late final _BackgroundSubtractorKNN_CreateWithParams =
      _BackgroundSubtractorKNN_CreateWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              int, double, bool, ffi.Pointer<BackgroundSubtractorKNN>)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorKNN_CreateWithParams_Async(
    int history,
    double dist2Threshold,
    bool detectShadows,
    imp1.CvCallback_1 callback,
  ) {
    return _BackgroundSubtractorKNN_CreateWithParams_Async(
      history,
      dist2Threshold,
      detectShadows,
      callback,
    );
  }

  late final _BackgroundSubtractorKNN_CreateWithParams_AsyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  ffi.Int, ffi.Double, ffi.Bool, imp1.CvCallback_1)>>(
      'BackgroundSubtractorKNN_CreateWithParams_Async');
  late final _BackgroundSubtractorKNN_CreateWithParams_Async =
      _BackgroundSubtractorKNN_CreateWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              int, double, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorKNN_Create_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _BackgroundSubtractorKNN_Create_Async(
      callback,
    );
  }

  late final _BackgroundSubtractorKNN_Create_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'BackgroundSubtractorKNN_Create_Async');
  late final _BackgroundSubtractorKNN_Create_Async =
      _BackgroundSubtractorKNN_Create_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorMOG2_Apply(
    BackgroundSubtractorMOG2 self,
    Mat src,
    Mat dst,
  ) {
    return _BackgroundSubtractorMOG2_Apply(
      self,
      src,
      dst,
    );
  }

  late final _BackgroundSubtractorMOG2_ApplyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(BackgroundSubtractorMOG2, Mat,
              Mat)>>('BackgroundSubtractorMOG2_Apply');
  late final _BackgroundSubtractorMOG2_Apply =
      _BackgroundSubtractorMOG2_ApplyPtr.asFunction<
          ffi.Pointer<CvStatus> Function(BackgroundSubtractorMOG2, Mat, Mat)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorMOG2_Apply_Async(
    BackgroundSubtractorMOG2 self,
    Mat src,
    imp1.CvCallback_1 callback,
  ) {
    return _BackgroundSubtractorMOG2_Apply_Async(
      self,
      src,
      callback,
    );
  }

  late final _BackgroundSubtractorMOG2_Apply_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(BackgroundSubtractorMOG2, Mat,
              imp1.CvCallback_1)>>('BackgroundSubtractorMOG2_Apply_Async');
  late final _BackgroundSubtractorMOG2_Apply_Async =
      _BackgroundSubtractorMOG2_Apply_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              BackgroundSubtractorMOG2, Mat, imp1.CvCallback_1)>();

  void BackgroundSubtractorMOG2_Close(
    BackgroundSubtractorMOG2Ptr self,
  ) {
    return _BackgroundSubtractorMOG2_Close(
      self,
    );
  }

  late final _BackgroundSubtractorMOG2_ClosePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(BackgroundSubtractorMOG2Ptr)>>(
      'BackgroundSubtractorMOG2_Close');
  late final _BackgroundSubtractorMOG2_Close =
      _BackgroundSubtractorMOG2_ClosePtr.asFunction<
          void Function(BackgroundSubtractorMOG2Ptr)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorMOG2_Create(
    ffi.Pointer<BackgroundSubtractorMOG2> rval,
  ) {
    return _BackgroundSubtractorMOG2_Create(
      rval,
    );
  }

  late final _BackgroundSubtractorMOG2_CreatePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  ffi.Pointer<BackgroundSubtractorMOG2>)>>(
      'BackgroundSubtractorMOG2_Create');
  late final _BackgroundSubtractorMOG2_Create =
      _BackgroundSubtractorMOG2_CreatePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<BackgroundSubtractorMOG2>)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorMOG2_CreateWithParams(
    int history,
    double varThreshold,
    bool detectShadows,
    ffi.Pointer<BackgroundSubtractorMOG2> rval,
  ) {
    return _BackgroundSubtractorMOG2_CreateWithParams(
      history,
      varThreshold,
      detectShadows,
      rval,
    );
  }

  late final _BackgroundSubtractorMOG2_CreateWithParamsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Double, ffi.Bool,
                  ffi.Pointer<BackgroundSubtractorMOG2>)>>(
      'BackgroundSubtractorMOG2_CreateWithParams');
  late final _BackgroundSubtractorMOG2_CreateWithParams =
      _BackgroundSubtractorMOG2_CreateWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              int, double, bool, ffi.Pointer<BackgroundSubtractorMOG2>)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorMOG2_CreateWithParams_Async(
    int history,
    double varThreshold,
    bool detectShadows,
    imp1.CvCallback_1 callback,
  ) {
    return _BackgroundSubtractorMOG2_CreateWithParams_Async(
      history,
      varThreshold,
      detectShadows,
      callback,
    );
  }

  late final _BackgroundSubtractorMOG2_CreateWithParams_AsyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  ffi.Int, ffi.Double, ffi.Bool, imp1.CvCallback_1)>>(
      'BackgroundSubtractorMOG2_CreateWithParams_Async');
  late final _BackgroundSubtractorMOG2_CreateWithParams_Async =
      _BackgroundSubtractorMOG2_CreateWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              int, double, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> BackgroundSubtractorMOG2_Create_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _BackgroundSubtractorMOG2_Create_Async(
      callback,
    );
  }

  late final _BackgroundSubtractorMOG2_Create_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'BackgroundSubtractorMOG2_Create_Async');
  late final _BackgroundSubtractorMOG2_Create_Async =
      _BackgroundSubtractorMOG2_Create_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CalcOpticalFlowFarneback(
    Mat prevImg,
    Mat nextImg,
    Mat flow,
    double pyrScale,
    int levels,
    int winsize,
    int iterations,
    int polyN,
    double polySigma,
    int flags,
  ) {
    return _CalcOpticalFlowFarneback(
      prevImg,
      nextImg,
      flow,
      pyrScale,
      levels,
      winsize,
      iterations,
      polyN,
      polySigma,
      flags,
    );
  }

  late final _CalcOpticalFlowFarnebackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              Mat,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int)>>('CalcOpticalFlowFarneback');
  late final _CalcOpticalFlowFarneback =
      _CalcOpticalFlowFarnebackPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, double, int, int, int, int, double, int)>();

  ffi.Pointer<CvStatus> CalcOpticalFlowFarneback_Async(
    Mat prevImg,
    Mat nextImg,
    Mat flow,
    double pyrScale,
    int levels,
    int winsize,
    int iterations,
    int polyN,
    double polySigma,
    int flags,
    imp1.CvCallback_0 callback,
  ) {
    return _CalcOpticalFlowFarneback_Async(
      prevImg,
      nextImg,
      flow,
      pyrScale,
      levels,
      winsize,
      iterations,
      polyN,
      polySigma,
      flags,
      callback,
    );
  }
